# HRM-gamer

./: .env.example  .gitignore  FOR_HUMAN.md  PROJECT_OUTLINE.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: pmd_ram_notes.md  reasoning_prompts.md
env/retro-integration/: PokemonMysteryDungeonRedRescueTeam-GBA.json  data.json
scripts/: run_local.sh  setup_linux.sh  setup_mac.sh  teleop_record.py
src/: app.py
src/common/: config.py  events.py  logging_utils.py  retro_wrappers.py  schemas.py
src/fast/: runner.py
src/fast/planner/: pathfinder.py
src/fast/skills/: combat.py  items.py  menu.py  navigation.py
src/slow/: llm_client.py  manager.py  prompt_templates.py
tests/: test_pathfinder.py  test_schemas.py  test_skills.py
